[project]
name = "tsadmetrics"
version = "0.1.0"
description = ""
authors = [
    {name = "Shingo Higashiguchi"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]
packages = [
    { include = "tsadmetrics", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
